--- a/config/locales/messages.pt-BR.yml
+++ b/config/locales/messages.pt-BR.yml
@@ -6,3 +6,6 @@
     created: Item criado com sucesso! 
     updated: Item atualizado com sucesso!
     destroyed: Item excluído com sucesso!
+    kind_created: Tipo criado com sucesso!
+    kind_updated: Tipo atualizado com sucesso!
+    kind_destroyed: Tipo deletado com sucesso!
